--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,15 @@ uuid = "f65e5574-8956-4725-89eb-f6420e041aeb"
 authors = ["James Mulhern"]
 version = "1.0.0-DEV"
 
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
+
 [compat]
 julia = "1.6.7"
 
